--- a/TitanBar/changelog.txt
+++ b/TitanBar/changelog.txt
@@ -1,152 +1,162 @@
-This is a replacement for TitanBar 1.24 by Habna. You don't need the original files
+This is a replacement for TitanBar v1.29.00 by Thorondor which replaced v1.24 by Habana.
+You do not need the original files.
 
 Todo:
-- (requested by Pulse) Add "Chicken Chasing League of Eriador" to Reputation Control http://lotro-wiki.com/index.php/Chicken_Chasing_League_of_Eriador
-- (requested by Modnar) Real time alarm.
-- (requested by Modnar) In-game time alarm
+- (requested by Modnar) Real time and/or In-game time alarm
 - (requested by Modnar) User-defined control sizes
 
 Known Issues:
 - The percentages on the PlayerInfo control don't include equipment.
-- Some missing translations. (Mostly French)
-- Controls I added don't unload from submenu.
-- Reputations for Dol Amroth don't max out at first rank.
-- Some low res icons. Searching for replacements.
+- Some missing/poor translations. (Mostly French)
+- Controls Thorondor added may not unload from submenu.
+- Some low res icons; searching for replacements.
 
-=======================================================================================================
-v1.29.00 (21 mar 2015)
-New:
-- Tooltip for Vault (requested by Pulse). 
-- Tooltip for Shared Storage (requested by Pulse).
+=================================================
+v1.33.01 (April 02, 2020)
+
+U25 and beyond changes
+
+=================================================
+v1.31.07 (April 03, 2018)
+
+Now with more refactoring!
+
+Fixed:
+- some minor localization errors
+
+=================================================
+v1.31.05 (January 29, 2018) (alpha)
+
+Fixed:
+- some major bugs in refactoring the wallet
+- German reputation tracking
+
+=================================================
+v1.31.01 (January 29, 2018) (alpha)
 
 Changed:
-- Changed scores for items in Equipment info. Score is now normalized as a score between 1 and 100. It 
-is still based on Quality and Durability, because item level isn't present in the API.
-- Removed equipment score from TitanBar. Now just shows icon.
+- Refactoring the wallet
+-- Faster Loading!
+-- More flexibility to add more currencies!
 
-=======================================================================================================
-v1.28.00 (12 mar 2015)
-Suggested by Modnar:
-- Changes to layout of Playerinfo. You can now enable/disable alternative layout in "More Options".
-- Fixes to layout of Playerinfo.
-- Money info now highlights coins as well. 
+=================================================
+v1.30.28 (January 25, 2018)
+
+Changed:
+- Faction order now more closely represents the order in which you'll encounter them in the game
+-- "Special Event" factions will be near the bottom in chronological order
+-- "Reputation Accelerator" will remain at the very bottom of the table
+
+Added:
+- Currencies
+-- Bingo Badges
+-- Yule Festival Tokens
+-- Anniversary Tokens
+
+=================================================
+v1.30.27 (January 16, 2018)
+
+Fixed:
+- Player Info: Improvements lua https://github.com/Technical-13/HabnaPlugins/issues/39
+- Track Items: Improvements https://github.com/Technical-13/HabnaPlugins/issues/41
+
+=================================================
+v1.30.261 (January 12, 2018)
+
+Repacked for LPC: No coding changes.
+
+=================================================
+v1.30.26 (January 11, 2018)
+
+Fixed:
+- Wrong reputations in french lua https://github.com/Technical-13/HabnaPlugins/issues/34
+- Lua error 978 https://github.com/Technical-13/HabnaPlugins/issues/35
+
+=================================================
+v1.30.25 (January 8, 2018)
+
+Fixed:
+- Profiles failed to save on non-English clients
+-- saving does not work on non-english client
+--- https://github.com/Technical-13/HabnaPlugins/issues/15
+-- No saving Profile
+--- https://github.com/Technical-13/HabnaPlugins/issues/31
+- Error and new Reputation https://github.com/Technical-13/HabnaPlugins/issues/29
+- Errors on french version https://github.com/Technical-13/HabnaPlugins/issues/32
+
+Added:
+- New reputations for:
+-- Conquest of Gorgoroth
+-- Enmity of Fushaum Bal sout
+-- Enmity of Fushaum Bal north
+-- Red Sky Clan
+-- Reputation Accelerator! - Thanks Drono/4andreas
+- Currency - Ash of Gorgoroth
+-- https://github.com/Technical-13/HabnaPlugins/pull/30
+
+=================================================
+v1.30.2 (November 6, 2017)
+
+Fixed:
+- ComboBox fix https://github.com/Technical-13/HabnaPlugins/pull/20
+- Format/color for French client https://github.com/Technical-13/HabnaPlugins/pull/25
+
+Added:
+- Host of the West reputation https://github.com/Technical-13/HabnaPlugins/pull/24
+
+Refactored:
+- Reputation https://github.com/Technical-13/HabnaPlugins/pull/24
+- Money info https://github.com/Technical-13/HabnaPlugins/pull/24
+- Player stats with Mordor https://github.com/Technical-13/HabnaPlugins/pull/24
+
+
+
+=================================================
+v1.30.11 (Febuary 11, 2017)
+
+Fixed:
+- "Invalid Data Scope": https://github.com/Technical-13/HabnaPlugins/issues/7
+- Item durability more accurate on toolbar load: https://github.com/Technical-13/HabnaPlugins/issues/8
+- DurabilityInfoToolTip color coding feature is wrong.: https://github.com/Technical-13/HabnaPlugins/issues/10
+
+=================================================
+v1.30.08 (Febuary 9, 2017)
 
 New:
-- Enabled Durability & Equipment Info. Turbine fixed the API.
+- Reputations will now automatically be hidden from the toolTip when at max
+	- Option to toggle this feature on/off not currently WAI (haven't figured out how to restore previous selection)
 
-=======================================================================================================
-v1.27.03 (11 mar 2015)
-- Fixed background color picker
-- Fixed display with large fonts
+=================================================
+v1.30.07 (Febuary 8, 2017)
 
-=======================================================================================================
-v1.27.02 (4 mar 2015)
-- Fixed small bug in options dialog
-- Fixed bug in German version for the Gift giver's Band wallet control.
+Bug fixes:
+- Fixed https://github.com/Technical-13/HabnaPlugins/issues/3 via
+  https://github.com/Technical-13/HabnaPlugins/commit/8c46d8b034ff3e69cdf9dad0b3ce6cbc6dd66e61
+- Fixed missing icon to be able to delete profiles (4andreas)
+- Item durability more accurate, despite larger gap; For details, see:
+  https://github.com/Technical-13/HabnaPlugins/issues/6
+- Previous users with their Turbine Points set should now see their LOTRO Points
 
-=======================================================================================================
-v1.27.01 (28 feb 2015)
-Fixes:
-- Correctly resize icon for Turbine Points in the wallet tooltip (Fix by Pulse)
-- Changed several german translations (DaBear78)
-- Fixed tooltip for "Central Gondor Silver Piece" (Started to bother me :p)
+Known issues:
+-  https://github.com/Technical-13/HabnaPlugins/issues
+=================================================
+v1.30.04 (Febuary 7, 2017)
 
-=======================================================================================================
-v1.27.00 (27 feb 2015)
-Added to wallet:
-- Central Gondor Silver Piece
-- Gift-giver's Brand
+Bug fix:
+- Fixed https://github.com/Technical-13/HabnaPlugins/issues/4 :: "Set back color" bug
 
-=======================================================================================================
-v1.26.03 (19 feb 2015)
-Fixes:
-- Fixed Infamy Freeps/Creeps Icon
+=================================================
+v1.30.02 (Febuary 5, 2017)
 
-=======================================================================================================
-v1.26.02 (18 feb 2015)
-Fixes:
-- Russian clients now get English language instead of error.
+New:
+- PlayerInfosToolTip now properly goes to level 105 (tappino)
+- U18 reputation factions added. (tappino)
+- "Chicken Chasing League of Eriador" reputation faction added.
 
-=======================================================================================================
-v1.26.01 (3 feb 2015)
-Fixes:
-- New controls now update when quantity is changed.
-- Fixed German translations for Stars of Merit (bornfight)
+Changed:
+- "Turbine Point" to "LOTRO Point" update
+- "Turbine" to "SSG" update where appropriate
 
-=======================================================================================================
-v1.26 (01 feb 2015)
-Additions:
-- Added Beorning Race & Class to PlayerInfo Control
-- Added to Wallet control:
-	Amroth Silver Pieces
-	Stars of Merit
-
-Fixes:
-- Fixed percentage calculations in PlayerInfo Control
-- Fixed small bugs.
-- Fixes in German and French translations
-
-Changes:
-- Completely redesigned PlayerInfo Control
-  Percentages in control are based solely on its rating.
-- Removed most of shell commands.
-  Current available commands:
-  opt - Show menu
-  u - Unload TitanBar
-  r - Reload TitanBar
-  ra - Reset Settings
-  ? or sc - Help Info
-  pw - Show Wallet Items
-- Changed various icons to higher res in-game icons.
-- Code changes and cleanup.
-
-=======================================================================================================
-v1.25.03 (17 jan 2015)
-- Added Lvls 86 - 100 to PlayerInfo Control. (As reported by Rhyse170)
-The other stats are off. Will be fixed (hopefully) in next major release.
-
-=======================================================================================================
-v1.25.02 (16 jan 2015):
-- Fixed version number (for Plugin Compendium), but for real this time
-
-=======================================================================================================
-v1.25.01 (16 jan 2015):
-- Fixed version number (for Plugin Compendium)
-
-=======================================================================================================
-v1.25.00 (4 jan 2015):
-- Added translations for factions introduced in v.1.25.00 Beta (DE & FR) -> Thx bornfight
-- Added translations for guild ranks T8&T9 (DE) -> Thx bornfight
-- Added translations for Mithril Coins (DE & FR) -> Thx bornfight!
-
-=======================================================================================================
-v1.25.00 Beta (3 jan 2015):
-
-- Added factions (EN):
-	The Ents of Fangorn Forest
-	Dol Amroth
-	Dol Amroth – Armoury
-	Dol Amroth – Bank
-	Dol Amroth – Docks
-	Dol Amroth – Great Hall
-	Dol Amroth – Library
-	Dol Amroth – Warehouse
-	Dol Amroth – Mason
-	Dol Amroth – Swan-Knight
-	Men of Ringló Vale
-	Men of Dor-en-Ernil
-	Men of Lebennin
-	Pelargir
-
-- Added factions (DE):
-	Die Ents des Fangornwaldes
-
-- Added guild ranks (EN) UNTESTED:
-	T8 Eastemnet Master
-	T9 Westemnet Master
-
-- Added Mithril Coins to Wallet ("/titanbar mc")
-- Added Tokens of Hytbold to Wallet ("/titanbar ht")
 	
 Need translations! 
 If you notice an error, please send me a pm or post it on the boards.
